Fix rectangle alignment across breakpoints

--- a/themes/base-hugo-theme/assets/scss/pulsetest.scss
+++ b/themes/base-hugo-theme/assets/scss/pulsetest.scss
@@ -15,7 +15,7 @@ body.home {
         width: 100%;
         height: 90vh;
        // overflow: hidden;
-        .yellow-rect {
+       /* .yellow-rect {
             align-items: flex-end;
             justify-content: flex-end;
         } 
@@ -32,21 +32,18 @@ body.home {
         } 
         .blue-rect {
             align-items: flex-start;
-            justify-content: flex-start;
-               
-        }
+            justify-content: flex-start;   
+        } */
         img {
          width: 80%;
          will-change: ('opacity, transform');
         }
-
-        &.rect-sm {
-            .col-12 {
-                position: absolute;
-                top: 7%;
-                left: 2%;
-            }
+        .col-12 {
+            position: absolute;
+            top: -10vh;
+            left: 9%;
         }
+        
     }
     .hero {
         height: 90vh;
